--- a/index.html
+++ b/index.html
@@ -317,6 +317,15 @@
       <source src="gauthu.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+    <video width="320" height="240" controls>
+      <source src="bngrm.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+<video width="320" height="240" controls>
+      <source src="mohana.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
   </div>
 </div>
 
