--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <h2>💖 Reasons You're Amazing</h2>
     <ul style="text-align:left; max-width: 500px; margin: auto;">
       <li>You always know how to make me smile.</li>
-      <li> I fell more comfortable  when i was with you what ever the situation.</li>
+      <li> I feel more comfortable  when i was with you what ever the situation.</li>
       <li> You're incredibly smart and thoughtful.</li>
       <li> Your memes are legendary (Car lo untadhi seat belt ninnu chusthea naa heart melt).</li>
       <li> You're simply one of a kind!</li>
@@ -256,7 +256,7 @@
       <label><input type="radio" name="When Sad" value="Text you"> Text you</label><br>
       <label><input type="radio" name="When Sad" value="Sleep"> Sleep</label><br>
       <label><input type="radio" name="When Sad" value="Listen to music"> Listen to music</label><br>
-      <label><input type="radio" name="When Sad" value="Write  a letter and reduce my stress levels"> Write a letter and reduce my stress levels</label><br>
+      <label><input type="radio" name="When Sad" value="Write  a letter to reduce my stress levels"> Write a letter and reduce my stress levels</label><br>
       <label><input type="radio" name="When Sad" value="Meditation"> Meditation</label><br>
 
       <p><b>What is my favorite memory with you?</b></p>
